# supabase-rpc-auth-scanner

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: example-scan.yml  test.yml
src/supabase_rpc_auth_scanner/: __init__.py  cli.py  reporter.py  scanner.py
src/valtik_supabase_rpc_auth_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_reporter.py  test_scanner.py  test_scanner_integration.py
